--- a/index.html
+++ b/index.html
@@ -35,6 +35,7 @@ Need help?
     <a href="https://accounts.google.com/">
       Create Account
     </a>
+    <a> Flee from here </a>
     </div>
 
 
